@@ -5,7 +5,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.HashMap;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -15,11 +14,12 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
-import org.junit.runner.RunWith;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
+
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.CaseWorkerAccessProfile;
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.RoleAssignment;
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.ActorIdType;
@@ -29,14 +29,13 @@ import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.RoleType;
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.Classification;
 import uk.gov.hmcts.reform.orgrolemapping.helper.UserAccessProfileBuilder;
 
-@RunWith(MockitoJUnitRunner.class)
+@ExtendWith(MockitoExtension.class)
 class DroolCivilStaffOrgRolesTest extends DroolBase {
 
     static final String SERVICE_CODE_1 = "AAA6";
     static final String SERVICE_CODE_2 = "AAA7";
     static final String REGION_ID = "region1";
     static final String JURISDICTION = "CIVIL";
-    static final String ROLE_TYPE = "ORGANISATION";
 
     static Map<String, String> expectedRoleNameWorkTypesMap = new HashMap<>();
 
@@ -56,6 +55,7 @@ class DroolCivilStaffOrgRolesTest extends DroolBase {
         expectedRoleNameWorkTypesMap.put("task-supervisor", "routine_work,hearing_work,access_requests");
         expectedRoleNameWorkTypesMap.put("case-allocator", null);
         expectedRoleNameWorkTypesMap.put("wlu-admin", "routine_work,query_work,welsh_translation_work");
+        expectedRoleNameWorkTypesMap.put("wlu-team-leader", "routine_work,query_work,welsh_translation_work");
     }
 
     static void assertCommonRoleAssignmentAttributes(RoleAssignment r, String roleId,
@@ -84,7 +84,7 @@ class DroolCivilStaffOrgRolesTest extends DroolBase {
             assertEquals(JURISDICTION, r.getAttributes().get("jurisdiction").asText());
             assertFalse(r.isReadOnly());
             assertEquals(UserAccessProfileBuilder.PRIMARY_LOCATION_ID, primaryLocation);
-            if (List.of("9", "10", "1", "2").contains(roleId)) {
+            if (List.of("9", "10", "1", "2", "20", "21").contains(roleId)) {
                 assertNull(r.getAttributes().get("region"));
             } else {
                 assertEquals(REGION_ID, r.getAttributes().get("region").asText());
@@ -95,7 +95,7 @@ class DroolCivilStaffOrgRolesTest extends DroolBase {
         String expectedWorkTypes;
         if (roleId.equals("1") && r.getRoleName().equals("task-supervisor")) {
             expectedWorkTypes = "decision_making_work,access_requests";
-        } else if (roleId.equals("20") && r.getRoleName().equals("task-supervisor")) {
+        } else if (roleId.equals("21") && r.getRoleName().equals("task-supervisor")) {
             expectedWorkTypes = "routine_work,query_work,welsh_translation_work";
         } else {
             expectedWorkTypes = expectedRoleNameWorkTypesMap.get(r.getRoleName());
@@ -111,7 +111,7 @@ class DroolCivilStaffOrgRolesTest extends DroolBase {
     /* test parameters
      * roleId,expectedRoleNames,expectedRoleCount,expectedRoleCategory,taskSupervisorFlag,caseAllocatorFlag
      */
-    static Stream<Arguments> generateDatav14() {
+    static Stream<Arguments> generateData() {
         return Stream.of(
             Arguments.of("10", Arrays.asList("hmcts-ctsc", "ctsc"), 2, RoleCategory.CTSC, "N", "N"),
             Arguments.of("9", Arrays.asList("ctsc", "hmcts-ctsc", "ctsc-team-leader"), 3, RoleCategory.CTSC,
@@ -139,36 +139,36 @@ class DroolCivilStaffOrgRolesTest extends DroolBase {
             Arguments.of("1", Arrays.asList("tribunal-caseworker", "senior-tribunal-caseworker",
                 "hmcts-legal-operations", "task-supervisor", "case-allocator"), 5, RoleCategory.LEGAL_OPERATIONS, "Y",
                 "Y"),
-            Arguments.of("20", Collections.singletonList("wlu-admin"), 1, RoleCategory.ADMIN,
-                "N", "N"),
-            Arguments.of("20", Arrays.asList("wlu-admin", "task-supervisor"), 2, RoleCategory.ADMIN,
-                    "Y", "N")
+            Arguments.of("20", Collections.singletonList("wlu-admin"), 1, RoleCategory.ADMIN, "N", "N"),
+            Arguments.of("21", Arrays.asList("wlu-team-leader", "wlu-admin"), 2, RoleCategory.ADMIN, "N", "N"),
+            Arguments.of("21", Arrays.asList("wlu-team-leader", "wlu-admin", "task-supervisor"), 3, RoleCategory.ADMIN,
+                "Y", "N")
         );
     }
 
     @ParameterizedTest
-    @MethodSource("generateDatav14")
-    void shouldReturnCivilAdminMappings_v14(String roleId,
-                                            List<String> roleNames,
-                                            int roleCount,
-                                            RoleCategory expectedRoleCategory,
-                                            String taskSupervisorFlag,
-                                            String caseAllocatorFlag) {
+    @MethodSource("generateData")
+    void shouldReturnCivilCaseworkerMappings(String roleId,
+                                             List<String> roleNames,
+                                             int roleCount,
+                                             RoleCategory expectedRoleCategory,
+                                             String taskSupervisorFlag,
+                                             String caseAllocatorFlag) {
         // As CIVIL has 2 service codes AAA6 and AAA7 and the CaseWorkerAccessProfile has one service code we run
         // the test method twice, once with each service code
-        shouldReturnCivilAdminMappings_v14(roleId, roleNames, roleCount, expectedRoleCategory, taskSupervisorFlag,
+        shouldReturnCivilCaseworkerMappings(roleId, roleNames, roleCount, expectedRoleCategory, taskSupervisorFlag,
                 caseAllocatorFlag, SERVICE_CODE_1);
-        shouldReturnCivilAdminMappings_v14(roleId, roleNames, roleCount, expectedRoleCategory, taskSupervisorFlag,
+        shouldReturnCivilCaseworkerMappings(roleId, roleNames, roleCount, expectedRoleCategory, taskSupervisorFlag,
                 caseAllocatorFlag, SERVICE_CODE_2);
     }
 
-    void shouldReturnCivilAdminMappings_v14(String roleId,
-                                            List<String> roleNames,
-                                            int roleCount,
-                                            RoleCategory expectedRoleCategory,
-                                            String taskSupervisorFlag,
-                                            String caseAllocatorFlag,
-                                            String serviceCode) {
+    void shouldReturnCivilCaseworkerMappings(String roleId,
+                                             List<String> roleNames,
+                                             int roleCount,
+                                             RoleCategory expectedRoleCategory,
+                                             String taskSupervisorFlag,
+                                             String caseAllocatorFlag,
+                                             String serviceCode) {
 
         judicialAccessProfiles.clear();
         judicialOfficeHolders.clear();
@@ -193,7 +193,7 @@ class DroolCivilStaffOrgRolesTest extends DroolBase {
         assertFalse(roleAssignments.isEmpty());
         assertEquals(roleCount, roleAssignments.size());
 
-        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList()),
+        assertThat(roleAssignments.stream().map(RoleAssignment::getRoleName).toList(),
                 containsInAnyOrder(roleNames.toArray()));
 
         roleAssignments.forEach(r -> {
